<resources>
    <string name="app_name">RawGames</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ratings_text">%s RATINGS</string>
    <string name="about">About</string>
    <string name="platform">Platform</string>
    <string name="image">Image</string>
    <string name="genre">Genre</string>
    <string name="release_date">Release Date</string>
    <string name="publisher">Publisher</string>
    <string name="developer">Developer</string>
    <string name="age_rating">Age Rating</string>
    <string name="playtime_text">Average Playtime: %s</string>
    <string name="where_to_buy">Where to buy</string>
    <string name="tags">Tags</string>
    <string name="search">Search Games&#8230;</string>
    <string name="back">Back</string>
    <string name="power_connected">Power connected!</string>
    <string name="power_disconnected">Power disconnected!</string>
    <string name="share">Share</string>
</resources>